# images-manage

./: .eslintrc.json  .gitignore  BUILD.md  CLAUDE.md  LICENSE  README.md  config.json  dev.db  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.sisyphus/: boulder.json
.sisyphus/plans/: image-manager-project.md
docs/plans/: 2025-02-02-edit-image-filename.md
prisma/: .env  prisma.config.ts  schema.prisma  seed.ts
prisma/migrations/20240101000000_init/: migration.sql
scripts/: copy-assets.cjs  postbuild.cjs
src/: App.tsx  DesktopApp.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_server.rs  commands.rs  config.rs  database.rs  image.rs  lib.rs  main.rs  upload.rs
src/components/: ErrorBoundary.tsx  ImageCard.tsx  ImageDetailDialog.tsx  Layout.tsx  Router.tsx
src/components/mobile/: ImageViewer.tsx
src/lib/: prisma.ts
src/pages/: Gallery.tsx  Home.tsx  Login.tsx  MobileGallery.tsx  MobileHome.tsx  MobileSettings.tsx  MobileUpload.tsx  QrCode.tsx  Search.tsx  Settings.tsx  Upload.tsx
src/server/: index.ts
src/stores/: appStore.ts  authStore.ts
src/styles/: globals.css
src/utils/: errorHandler.ts  imageUtils.ts  logger.ts
